DigicielFull/force-app/main/default/objects/Equipment_Order_Tracking__c/Equipment_Order_Tracking__c.object-meta.xml
<CustomObject>
    <label>Equipment Order Tracking</label>
    <nameField>
        <label>Equipment Order Tracking Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Equipment Orders Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>