DigicielFull/force-app/main/default/objects/Equipment_Order_Tracking__c/fields/Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Type__c</fullName>
    <description>Defines the type of asset requested</description>
    <inlineHelpText>Defines the type of asset requested</inlineHelpText>
    <label>Asset Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Access Point - Wireless</fullName>
            </value>
            <value>
                <fullName>Antenna</fullName>
            </value>
            <value>
                <fullName>Backup Battery</fullName>
            </value>
            <value>
                <fullName>Base Station</fullName>
            </value>
            <value>
                <fullName>Bracket</fullName>
            </value>
            <value>
                <fullName>Cable</fullName>
            </value>
            <value>
                <fullName>Computer System</fullName>
            </value>
            <value>
                <fullName>Connector</fullName>
            </value>
            <value>
                <fullName>Ethernet Converter</fullName>
            </value>
            <value>
                <fullName>Expansion Module</fullName>
            </value>
            <value>
                <fullName>Firewall - Wireless</fullName>
            </value>
            <value>
                <fullName>Gateway</fullName>
            </value>
            <value>
                <fullName>Gateway - Paging</fullName>
            </value>
            <value>
                <fullName>GPS Harness</fullName>
            </value>
            <value>
                <fullName>Hard Drive</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>Headset</fullName>
            </value>
            <value>
                <fullName>Hook - Phone</fullName>
            </value>
            <value>
                <fullName>Keyboard</fullName>
            </value>
            <value>
                <fullName>Keypad</fullName>
            </value>
            <value>
                <fullName>Lightning Arrestor</fullName>
            </value>
            <value>
                <fullName>Media Converter</fullName>
            </value>
            <value>
                <fullName>Media Module</fullName>
            </value>
            <value>
                <fullName>Memory Card</fullName>
            </value>
            <value>
                <fullName>Microphone - Wired</fullName>
            </value>
            <value>
                <fullName>Network Card</fullName>
            </value>
            <value>
                <fullName>Network Interface Module</fullName>
            </value>
            <value>
                <fullName>Network Processor</fullName>
            </value>
            <value>
                <fullName>Network Voice Router Module</fullName>
            </value>
            <value>
                <fullName>ONT - Optical Network Terminal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>