DigicielFull/force-app/main/default/objects/Equipment_Order_Tracking__c/fields/Customer_Install_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Install_Date__c</fullName>
    <label>Customer Install Date</label>
    <type>Date</type>
</CustomField>