DigicielFull/force-app/main/default/objects/Equipment_Order_Tracking__c/fields/Digicel_PO__c.field-meta.xml
<CustomField>
    <fullName>Digicel_PO__c</fullName>
    <label>Digicel PO</label>
    <length>16</length>
    <type>Text</type>
</CustomField>