DigicielFull/force-app/main/default/objects/Equipment_Order_Tracking__c/fields/Digicel_PO_Date_Rqstd__c.field-meta.xml
<CustomField>
    <fullName>Digicel_PO_Date_Rqstd__c</fullName>
    <label>Digicel PO Date Rqstd</label>
    <type>Date</type>
</CustomField>