DigicielFull/force-app/main/default/objects/Equipment_Order_Tracking__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Use to look up to Opportunity at Proposal Acceptance</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Equipment Orders Tracking</relationshipLabel>
    <relationshipName>Equipment_Orders_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>