DigicielFull/force-app/main/default/objects/Equipment_Order_Tracking__c/fields/ServiceRequest__c.field-meta.xml
<CustomField>
    <fullName>ServiceRequest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Request</label>
    <referenceTo>Service_Request__c</referenceTo>
    <relationshipLabel>Equipment Orders Tracking</relationshipLabel>
    <relationshipName>Equipment_Orders_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>