DigicielFull/force-app/main/default/objects/Equipment_Order_Tracking__c/fields/Shipment_Tracking_No__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Tracking_No__c</fullName>
    <label>Shipment Tracking No</label>
    <length>25</length>
    <type>Text</type>
</CustomField>