DigicielFull/force-app/main/default/objects/Equipment_Order_Tracking__c/recordTypes/PNG_Equipment_Tracker.recordType-meta.xml
<RecordType>
    <fullName>PNG_Equipment_Tracker</fullName>
    <active>true</active>
    <label>PNG Equipment Tracker</label>
</RecordType>