DigicielFull/force-app/main/default/objects/Equipment_Order_Tracking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Asset_Type__c</columns>
    <columns>Carrier__c</columns>
    <columns>Vendor__c</columns>
    <columns>Vndr_Equip_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>