DigicielFull/force-app/main/default/objects/Equipment_Order_Tracking__c/listViews/ICT_Barbados_Equipment_Orders.listView-meta.xml
<ListView>
    <fullName>ICT_Barbados_Equipment_Orders</fullName>
    <columns>Opportunity__c</columns>
    <columns>ServiceRequest__c</columns>
    <columns>NAME</columns>
    <columns>Asset_Type__c</columns>
    <columns>Raised_Date__c</columns>
    <columns>Digicel_PO__c</columns>
    <columns>Equipment_Ordered_Date__c</columns>
    <columns>Vndr_Equip_Status__c</columns>
    <columns>Shipment_Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Equipment_Order_Tracking__c.Barbados_Equipment_Tracker</value>
    </filters>
    <label>ICT Barbados Equipment Orders</label>
    <language>en_US</language>
    <sharedTo>
        <group>Barbados_ICT_Admin_Team</group>
        <group>Barbados_Power_Users</group>
        <group>ICT_Barbados_Account_Managers_All</group>
        <group>ICT_Barbados_Sales_Managers</group>
        <group>ICT_Barbados_Service_Delivery_Team</group>
        <group>ICT_Barbados_Technical</group>
    </sharedTo>
</ListView>